# Nova-Lang

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  add_missing_components.sh
.cache/clangd/index/: ASTContext.cpp.DC444303924AC6EA.idx  CodeGenModule.cpp.51021FD666888F01.idx  Driver.cpp.1382BEA376A0368B.idx  IdentifierTable.cpp.C7244F35FB44E050.idx  IdentifierTable.hpp.5E4936CF4DAE26DF.idx  Lexer.cpp.C73AAA22839FBAD1.idx  Lexer.hpp.01E68CB2B0857054.idx  LexerTest.cpp.F456760AEB837395.idx  Parser.cpp.263D75BC83F2E6DC.idx  Sema.cpp.0F999AD9C7B4396E.idx  SourceLocation.cpp.624829E04C745757.idx  SourceLocation.hpp.715C2859BFB65E71.idx  SourceManager.cpp.4483AF63BAD0867D.idx  SourceManager.hpp.74BCAF18CC951DE4.idx  Token.cpp.91965740EC809BF0.idx  Token.hpp.4F809E9891C71AF2.idx  TokenKinds.cpp.48197451BD9D5360.idx  TokenKinds.hpp.E1B23487DE1AA3C4.idx  nova.cpp.4D478325EBF9D75B.idx  repl.cpp.DD35AE0781FF6988.idx
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  cli.md  cmake-guide.md  developer-guide.md  diagnostics.md  features.md  implement.md  implementation-plan.md  ir-spec.md  language-spec.md  lowering-guide.md  status.md  testing-guide.md  writing-style.md
docs/api/: README.md
examples/: fibonacci.nova  hello_world.nova
include/nova/AST/: ASTVisitor.hpp  Decl.hpp  Expr.hpp  Pattern.hpp  Stmt.hpp  Type.hpp
include/nova/Analysis/: CFG.hpp  Lifetime.hpp
include/nova/Basic/: Diagnostic.hpp  DiagnosticEngine.hpp  Diagnostics.def  IdentifierTable.hpp  SourceLocation.hpp  SourceManager.hpp
include/nova/CodeGen/LLVM/: LLVMCodeGen.hpp  LLVMExprEmitter.hpp  LLVMTypeConverter.hpp
include/nova/Interpreter/: Environment.hpp  Interpreter.hpp  Value.hpp
include/nova/Lex/: Lexer.hpp  Punctuation.inc  Token.hpp  TokenKinds.def  TokenKinds.hpp
include/nova/Parse/: Parser.hpp
include/nova/Sema/: Scope.hpp  Symbol.hpp  TypeChecker.hpp
lib/: CMakeLists.txt
lib/AST/: ASTContext.cpp  CMakeLists.txt
lib/Analysis/: CMakeLists.txt
lib/Basic/: CMakeLists.txt  Diagnostic.cpp  DiagnosticEngine.cpp  IdentifierTable.cpp  SourceLocation.cpp  SourceManager.cpp
lib/CodeGen/: CMakeLists.txt  CodeGenModule.cpp
lib/CodeGen/Interpreter/: CMakeLists.txt
lib/CodeGen/LLVM/: CMakeLists.txt  LLVMCodeGen.cpp  LLVMExprEmitter.cpp  LLVMTypeConverter.cpp
lib/Driver/: CMakeLists.txt  Driver.cpp
lib/IR/: CMakeLists.txt
lib/Interpreter/: CMakeLists.txt  Environment.cpp  Interpreter.cpp  Value.cpp
lib/Lex/: CMakeLists.txt  Lexer.cpp  Token.cpp  TokenKinds.cpp
lib/Parse/: CMakeLists.txt  Parser.cpp
lib/Runtime/: CMakeLists.txt
lib/Sema/: CMakeLists.txt  Sema.cpp
lib/Transforms/: CMakeLists.txt
scripts/: build.sh  doc_academic_check.py  punc_gen.py  test.sh
stdlib/: error.nova
stdlib/async/: mod.nova
stdlib/collections/: deque.nova  hashmap.nova  hashset.nova  linkedlist.nova  vec.nova
stdlib/core/: clone.nova  cmp.nova  default.nova  fmt.nova  iter.nova  mem.nova  ops.nova  option.nova  prelude.nova  ptr.nova  result.nova  slice.nova  string.nova
stdlib/fs/: dir.nova  mod.nova  path.nova
stdlib/io/: file.nova  mod.nova
stdlib/math/: mod.nova
stdlib/net/: mod.nova  tcp.nova  udp.nova
stdlib/process/: command.nova  env.nova  mod.nova
stdlib/sync/: arc.nova  mod.nova  mutex.nova  rwlock.nova
stdlib/thread/: mod.nova
stdlib/time/: duration.nova  instant.nova  mod.nova
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt  README.md  nova-bench.cpp
tests/e2e/: README.md
tests/integration/: README.md
tests/unit/: CMakeLists.txt  DiagnosticTest.cpp  LexerTest.cpp  SourceLocationTest.cpp
tools/: CMakeLists.txt
tools/nova/: CMakeLists.txt  nova.cpp
tools/nova-repl/: CMakeLists.txt  repl.cpp
