add_subdirectory(Basic)
add_subdirectory(Lex)
add_subdirectory(Parse)
add_subdirectory(AST)
add_subdirectory(Sema)
add_subdirectory(CodeGen)
add_subdirectory(Interpreter)
add_subdirectory(Driver)

add_subdirectory(IR)
add_subdirectory(Transforms)
add_subdirectory(Runtime)
add_subdirectory(Analysis)
